# AntSimulation

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_DEBUG_FOR_DEVELOPERS.md  generate_hash.ps1  setup_hooks.py  setup_linux_dependencies.sh  test.txt  validation_history_log.txt  vcpkg.json  verification.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_or_feature_request.md
.github/workflows/: cmake-multi-platform.yml
.hooks/: pre-commit_LH
src/: Ant.cpp  Ant.hpp  Colony.cpp  Colony.hpp  Environment.cpp  Environment.hpp  RandomUtils.hpp  Verification.cpp  Verification.hpp  main.cpp
